[KOGITO-8991] Refactoring builder to split dependencies (#2934)
* [KOGITO-8991] OpenAPI refactor

* [KOGITO-8991] grpc dependency

* [KOGITO-8991] Rest runtime

* [KOGITO-8991] Java type handler only applies for executor

* [KOGITO-8991] Sonar warnings

* Helbers comments

* [KOGITO-8991] Adding WorkflowOperationIdFactory to native set